@@ -2,6 +2,10 @@ Revision history for Dist-Zilla-Plugin-Test-DiagINC
 
 {{$NEXT}}
 
+    [Changes]
+
+    - Munges test file without modifying line numbers.
+
 0.001     2014-02-04 22:19:50-05:00 America/New_York
 
     - First release
